<package>
  <name>sbox3</name>
  <version>0.1.0</version>
  <description>
    This package exports a header and a library.
  </description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>

  <build_depend>sbox2</build_depend>
  <run_depend>sbox2</run_depend>

  <build_depend>sbox2_alt</build_depend>
  <run_depend>sbox2_alt</run_depend>
</package>

